@@ -169,8 +169,8 @@ Thank you very much.
 <td>Chap5: Search primitives</td>
 <td>
 <div class="progress_background">
-  <div class="progress_foreground_red" style="width:17%;">
-    <span>17%</span>
+  <div class="progress_foreground_green" style="width:67%;">
+    <span>67%</span>
   </div>
 </div>
 </td>
