@@ -20,8 +20,8 @@
 <h5>Part II: Customization</h5>
 <ul>
 <li><a class="reference internal" href="{{ pathto('manual/search_primitives') }}">5. Search primitives</li>
-<li><a class="reference internal" href="{{ pathto('manual/LNS') }}">6. Large Neighbourhood Search</a></li>
-<li><a class="reference internal" href="{{ pathto('manual/LSO') }}">7. Local Search operators</a></li>
+<li><a class="reference internal" href="{{ pathto('manual/LSO') }}">6. Local Search operators</a></li>
+<li><a class="reference internal" href="{{ pathto('manual/LNS') }}">7. Large Neighbourhood Search</a></li>
 <li><a class="reference internal" href="{{ pathto('manual/custom_constraints') }}">8. Custom constraints</a></li>
 </ul>
 
