@@ -53,8 +53,8 @@ Foreword
          
              <p>
              <a class="reference internal" href="manual/search_primitives.html"><em>5. Search primitives</em></a><br>
-             <a class="reference internal" href="manual/LNS.html"><em>6. Large Neighbourhood Search</em></a><br>
-             <a class="reference internal" href="manual/LSO.html"><em>7. Local Search operators</em></a><br>
+             <a class="reference internal" href="manual/LSO.html"><em>6. Local Search operators</em></a><br>
+             <a class="reference internal" href="manual/LNS.html"><em>7. Large Neighbourhood Search</em></a><br>
              <a class="reference internal" href="manual/custom_constraints.html"><em>8. Custom constraints</em></a>
              </p>
 
@@ -380,8 +380,8 @@ Foreword
    Using objectives <manual/objectives>
    Reification <manual/reification>
    Search primitives <manual/search_primitives>
-   Large Neighbourhood Search <manual/LNS>
    Local Search operators <manual/LSO>
+   Large Neighbourhood Search <manual/LNS>
    Custom constraints <manual/custom_constraints>
    TSP with constraints <manual/TSP>
    VRP with constraints <manual/VRP>
